<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/tickets_block_space"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/ticket_selection_tv"
                style="@style/buy_text_info_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/ticket_selection"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ticket_number"
                style="@style/buy_text_info_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ticket_selection_tv" />

            <TextView
                android:id="@+id/ticket_price"
                style="@style/buy_text_info_reg_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ticket_selection_tv" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_blue"
                app:layout_constraintTop_toBottomOf="@id/ticket_number" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/light_blue"
            android:padding="@dimen/tickets_block_space"
            app:layout_constraintBottom_toTopOf="@id/validate_btn">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credit_card_details"
                style="@style/buy_text_info_bold" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:background="@drawable/white_rounded_rect"
                android:layout_marginTop="@dimen/cc_padding"
                android:layout_marginBottom="@dimen/cc_padding">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/first_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:padding="@dimen/cc_padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card_number"
                        style="@style/buy_text_info_reg_small_cc"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prefill_card"
                        style="@style/buy_text_info_medium"
                        app:layout_constraintRight_toRightOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/separation"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_blue"
                    app:layout_constraintTop_toBottomOf="@id/first_line" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/separation"
                    android:padding="@dimen/cc_padding">

                    <TextView
                        android:id="@+id/expiry_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expiry"
                        style="@style/buy_text_info_reg_small_cc"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                    <TextView
                        android:id="@+id/expiry_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prefill_expiry"
                        style="@style/buy_text_info_medium"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/expiry_label"
                        app:layout_constraintRight_toLeftOf="@id/cvv_label"/>

                    <TextView
                        android:id="@+id/cvv_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/CVV"
                        style="@style/buy_text_info_reg_small_cc"
                        app:layout_constraintLeft_toRightOf="@id/expiry_value"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/cvv_value"/>

                    <TextView
                        android:id="@+id/cvv_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prefill_cvv"
                        style="@style/buy_text_info_medium"
                        app:layout_constraintLeft_toRightOf="@id/cvv_label"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />
                    
                    <ImageView
                        android:id="@+id/iv_cvv_help"
                        android:layout_width="11dp"
                        android:layout_height="11dp"
                        android:src="@drawable/ic_cvv_help"
                        app:layout_constraintLeft_toRightOf="@id/cvv_value"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <Button
            android:id="@+id/validate_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pay"
            style="@style/Bottom_Btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>