<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/tickets_block_space"
    android:clipToPadding="false">

    <include
        layout="@layout/toolbar"
        android:id="@+id/appBarLayout" />

    <TextView
        android:id="@+id/chooseDeviceTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_selection"
        style="@style/buy_text_info_regular"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <LinearLayout
        android:id="@+id/contactlessCardBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/ticket_btn"
        android:elevation="@dimen/select_ticket_elevation"
        android:layout_marginTop="@dimen/tickets_block_space"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chooseDeviceTv"
        app:layout_constraintBottom_toTopOf="@id/simCardBtn"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/img_contactless_card_width"
            android:layout_height="@dimen/img_contactless_card_height"
            android:contentDescription="@string/contactless_card"
            android:scaleType="fitXY"
            android:src="@drawable/ic_icon_contactlesscard"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/device_slct_text_top_margin"
            android:text="@string/contactless_card"
            style="@style/buy_text_info_bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/simCardBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/ticket_btn"
        android:elevation="@dimen/select_ticket_elevation"
        android:layout_marginTop="@dimen/tickets_block_space"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactlessCardBtn"
        app:layout_constraintBottom_toTopOf="@id/wearableBtn"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/img_sim_width"
            android:layout_height="@dimen/img_sim_height"
            android:contentDescription="@string/sim_card"
            android:scaleType="fitXY"
            android:src="@drawable/ic_icon_simcard" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/device_slct_text_top_margin"
            android:text="@string/sim_card"
            style="@style/buy_text_info_bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wearableBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/ticket_btn"
        android:elevation="@dimen/select_ticket_elevation"
        android:layout_marginTop="@dimen/tickets_block_space"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/simCardBtn"
        app:layout_constraintBottom_toTopOf="@id/embeddedElemBtn"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/img_bracelet_width"
            android:layout_height="@dimen/img_bracelet_height"
            android:contentDescription="@string/wearable"
            android:scaleType="fitXY"
            android:src="@drawable/ic_icon_bracelet" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/device_slct_text_top_margin"
            android:text="@string/wearable"
            style="@style/buy_text_info_bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/embeddedElemBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/ticket_btn"
        android:elevation="@dimen/select_ticket_elevation"
        android:layout_marginTop="@dimen/tickets_block_space"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wearableBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/img_multi_card_width"
            android:layout_height="@dimen/img_multi_card_height"
            android:contentDescription="@string/embedded_secure_elem"
            android:scaleType="fitXY"
            android:src="@drawable/ic_icon_bankcard" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/device_slct_text_top_margin"
            android:text="@string/embedded_secure_elem"
            style="@style/buy_text_info_bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
